overflow fixed

--- a/css/styles/indexstyle.css
+++ b/css/styles/indexstyle.css
@@ -51,7 +51,7 @@ body {
     /*border: 3px solid #333;*/
     margin-left: 3px;
     margin-right: 3px;
-    overflow: auto;
+    overflow: hidden;
     color: white;
 }
 
